--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "lib/*",
     "index.js"
   ],
-  "dependencies": {
-    "jsbi": "^3.1.1"
-  },
   "devDependencies": {
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.19.0",
+    "babel-plugin-transform-jsbi-to-bigint": "^1.4.0",
     "eslint": "^8.23.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
